
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


struct TYPE_8__ {int type; } ;
typedef TYPE_2__ obj_hdr ;
struct TYPE_7__ {unsigned char* data; size_t len; } ;
struct TYPE_9__ {int zstream; TYPE_1__ map; } ;
typedef TYPE_3__ loose_readstream ;


 int GIT_ERROR_ODB ;
 int git_error_set (int ,char*) ;
 int git_object_typeisloose (int ) ;
 int git_zstream_set_input (int *,unsigned char const*,size_t) ;
 int parse_header_packlike (TYPE_2__*,size_t*,unsigned char const*,size_t) ;

__attribute__((used)) static int loose_backend__readstream_packlike(
 obj_hdr *hdr,
 loose_readstream *stream)
{
 const unsigned char *data;
 size_t data_len, head_len;
 int error;

 data = stream->map.data;
 data_len = stream->map.len;





 if ((error = parse_header_packlike(hdr, &head_len, data, data_len)) < 0)
  return error;

 if (!git_object_typeisloose(hdr->type)) {
  git_error_set(GIT_ERROR_ODB, "failed to inflate loose object");
  return -1;
 }

 return git_zstream_set_input(&stream->zstream,
  data + head_len, data_len - head_len);
}
